--- a/review-project/package.json
+++ b/review-project/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "firebase": "^4.9.0",
+    "vue": "^2.5.13",
     "vue-awesome": "^2.3.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
