--- a/review-project/package.json
+++ b/review-project/package.json
@@ -11,9 +11,10 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js && firebase deploy"
   },
   "dependencies": {
+    "buefy": "^0.6.2",
     "firebase": "^4.9.0",
     "vue": "^2.5.13",
     "vue-awesome": "^2.3.4",
